# brainframe-python

./: .gitignore  COPYING  README.rst  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: deploy.yml
brainframe/api/: __init__.py  bf_errors.py  status_receiver.py  stub.py
brainframe/api/bf_codecs/: __init__.py  alarm_codecs.py  base_codecs.py  capsule_codecs.py  cloud_codecs.py  condition_codecs.py  config_codecs.py  detection_codecs.py  identity_codecs.py  image_utils.py  license_codecs.py  oauth2_codecs.py  plugin_codecs.py  premises_codec.py  premises_codecs.py  snip_codecs.py  sorting.py  user_codec.py  user_codecs.py  zone_codecs.py
brainframe/api/stubs/: __init__.py  alarms.py  alerts.py  analysis.py  base_stub.py  capsules.py  cloud_tokens.py  cloud_users.py  encodings.py  identities.py  images.py  licenses.py  oauth2.py  plugins.py  premises.py  process_image.py  process_video.py  storage.py  streams.py  users.py  zone_statuses.py  zones.py
docs/: Makefile  alarms.rst  analysis_results.rst  api_class.rst  capsules.rst  conf.py  exceptions.rst  identities.rst  index.rst  licenses.rst  premises.rst  sorting.rst  storage.rst  streams.rst  users.rst  zones.rst
