[tool.poetry]
packages = [ { include = "brainframe/api" } ]
name = "brainframe-api"
version = "0.27.0.dev2"
description = "Provides a Python wrapper around the BrainFrame REST API."
authors = ["Aotu"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://github.com/aotuai/brainframe_python"
documentation = "https://brainframe-python-api.readthedocs.io/en/latest/"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
pillow = "^7.2.0"
numpy = "^1.16"
dataclasses = { version = "^0.7", python = "~3.6" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
